--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI/CD for HTML Page
 on:
   push:
     branches:
-      - master
+      - main
 
 permissions:
   contents: read
@@ -22,7 +22,6 @@ jobs:
         with:
           name: html-file
           path: ./index.html
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
