--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,45 +3,37 @@ name: CI/CD for HTML Page
 on:
   push:
     branches:
-      - main
-
+      - master
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
 jobs:
   build:
-    name: Build Artifacts
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Upload artifact to enable deployment
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: html-files
-          path: |
-            index.html
-            
+          name: html-file
+          path: ./index.html
+
   deploy:
-    name: Deploy to GitHub Pages
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
       - name: Download artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
-          name: html-files
+          name: html-file
           path: ./html
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
+          github_token: ${{ secrets.key }}
           publish_dir: ./html
